--- a/src/components/ui/App.module.scss
+++ b/src/components/ui/App.module.scss
@@ -1,9 +1,9 @@
-#center {
+.center {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  background-color: aliceblue;
+  background-color: rgba(18, 132, 231, 0.479);
 }
