--- a/src/components/ui/input/Input.module.scss
+++ b/src/components/ui/input/Input.module.scss
@@ -8,6 +8,8 @@
 }
 
 .Input {
-    border: 5px solid red;
-
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    padding: 8px 12px;
+    font-size: 1rem;
 }
