--- a/src/components/ui/LoginText/LoginText.module.scss
+++ b/src/components/ui/LoginText/LoginText.module.scss
@@ -1,8 +1,8 @@
 .LoginText {
     font-family: 'Dancing Script', cursive;
     font-style: italic; 
-    font-size: 2rem;
-    color: #834444;
+    font-size: 4rem;
+    color: #f7f6f6;
     text-align: center;
 
 }
