--- a/src/components/pages/homepage/Home.module.scss
+++ b/src/components/pages/homepage/Home.module.scss
@@ -5,6 +5,7 @@
 
   background-color: rgba(0, 0, 0, 0.5); // cor escura sem opacidade total
   background-blend-mode: darken; // mistura a imagem com a cor
+  
 
 
 }
@@ -14,12 +15,16 @@
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
-  height: 100%;
+   
+  height: 120px; // ou o valor que você definiu em alturaCartao
+  width: 250px;
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  gap: 5%;
+  gap: 3%;
+ 
 
   &:hover {
     transform: scale(1.02);
@@ -41,7 +46,7 @@
 
 .cardImage {
   width: 40%;
-  height: 40px;
+  height: 30px;
   object-fit: cover;
   border-radius: 9px;
 
@@ -74,11 +79,9 @@
   border: none;
   padding: 8px 12px;
   border-radius: 6px;
-  font-size: 14px;
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 6px; // espaço entre ícone e texto
   transition: background-color 0.2s ease;
 
   &:hover {
@@ -93,3 +96,9 @@
     font-size: 10px;
   }
 }
+
+.cardDescription {
+    font-size: 0.85rem;
+    color: #666;
+    margin-bottom: 6px;
+  }
