--- a/src/structure/header/Header.module.scss
+++ b/src/structure/header/Header.module.scss
@@ -25,3 +25,8 @@
 .link:hover {
   background-color: #21a1f1;
 }
+
+.btnTheme {
+  margin-left: 1rem;
+  /* outros estilos que queira adicionar no botão dentro do header */
+}
