--- a/src/structure/header/Header.module.scss
+++ b/src/structure/header/Header.module.scss
@@ -6,7 +6,7 @@
   justify-content: flex-end;  
   align-items: center;
   gap: 15px;                  
-  height: 50px;
+  height: 7vh;
 }
 
 .link {
