--- a/src/pages/gqzpage/Geoquiz.css
+++ b/src/pages/gqzpage/Geoquiz.css
@@ -12,7 +12,7 @@
 main {
     width: 100%;
     height: 76%;
-    background-image: url('/../loginpage/src/assets/chat.png');
+    /* background-image: url('/../loginpage/src/assets/chat.png'); */
     background-size: 1000px auto;
     background-color: rgba(0, 0, 0, 0.5); 
     background-blend-mode: darken; 
