--- a/src/pages/gqzpage/Geoquiz.css
+++ b/src/pages/gqzpage/Geoquiz.css
@@ -2,28 +2,30 @@
 @import url(./styles/ui/animated.globe.css);
 @import url(./styles/container/text_secondbtn.css);
 
-.body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0 0;
+/* Corrigindo o seletor body */
+body {
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box; /* para garantir que padding não aumente largura */
 }
-
 
 main {
     width: 100%;
-    height: 76%;
-    /* background-image: url('/../loginpage/src/assets/chat.png'); */
-    background-size: 1000px auto;
-    background-color: rgba(0, 0, 0, 0.5); 
-    background-blend-mode: darken; 
-
-    padding: 5% 33%;
+    height: 76vh; /* usar vh para manter proporcionalidade vertical */
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: darken;
+    background-size: contain; /* para melhor responsividade da imagem */
+    background-repeat: no-repeat;
+    background-position: center;
+    
+    padding: 5% 5%; /* padding mais controlado */
+    margin: 0 auto; /* centraliza horizontalmente */
 }
 
 footer {
     width: 100%;
-    height: 12%;
-    background-color: rgba(240, 248, 255, 0.329);
-
-
+    height: 12vh;
+    background-color: rgba(240, 248, 255, 0.33);
 }
