--- a/src/pages/gqzpage/styles/container/quiz.css
+++ b/src/pages/gqzpage/styles/container/quiz.css
@@ -3,10 +3,11 @@
 @import url(./../ui/buttons.css);
 
 #quiz_block {
-    width: 100%;
+    width: 50%;
     height: 60vh;
     background-color: aqua;
     position: relative;
+    margin-left: 25%;
 
     display: flex;
     flex-direction: column;
@@ -19,7 +20,7 @@
 
 
 #opcoes-container {
-    width: 100%;
+    width: 75%;
     height: 30%;
 
     display: flex;
